fixed collapse feature of navbar

--- a/ozfooty/src/app/header-cmp/header-cmp.component.css
+++ b/ozfooty/src/app/header-cmp/header-cmp.component.css
@@ -3,7 +3,7 @@
   display: block;
   padding-top: 1vh;
   padding-bottom: 1vh;
-  height: 6vh;
+  height: 3rem;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -12,10 +12,24 @@
 
 .navbar {
   background-color: #222d5a !important;
-  height: 6vh;
+
 }
 .navbar-nav > a{
   color: white;
   font-size: medium;
 
+
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+ }
+ .nav-link
+ {
+   color: white;
+   padding: 0.1rem;
+ }
+.active
+{
+  text-decoration: underline;
 }
